better colisions, still needs refactor

--- a/tp3/index.html
+++ b/tp3/index.html
@@ -20,7 +20,8 @@
 </head>
 
 <body>
-    <div id="canvas"></div>
+    <div id="canvas">
+    </div>
     <div id="camera"></div>
     <script type="module" src="main.js"></script>
 </body>
