--- a/tp3/index.html
+++ b/tp3/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <title>SGI Hello world TP1</title>
 
     <link rel="shortcut icon" href="image/favicon/3d.png" />
